--- a/backend/demo/src/main/resources/application.yml
+++ b/backend/demo/src/main/resources/application.yml
@@ -5,3 +5,11 @@ spring:
     url: jdbc:postgresql://localhost:5432/shp
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
